@@ -69,6 +69,8 @@ importFrom(LaplacesDemon,dbern)
 importFrom(LaplacesDemon,pbern)
 importFrom(LaplacesDemon,rbern)
 importFrom(MASS,ginv)
+importFrom(MASS,kde2d)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(Rcpp,evalCpp)
 importFrom(argosfilter,radian)
 importFrom(boot,inv.logit)
@@ -109,17 +111,23 @@ importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_shape_manual)
 importFrom(ggplot2,theme)
 importFrom(grDevices,adjustcolor)
+importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,gray)
 importFrom(grDevices,hcl)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
 importFrom(graphics,axis)
+importFrom(graphics,barplot)
+importFrom(graphics,contour)
 importFrom(graphics,hist)
+importFrom(graphics,image)
+importFrom(graphics,layout)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
+importFrom(graphics,plot.new)
 importFrom(graphics,points)
 importFrom(graphics,segments)
 importFrom(graphics,title)
@@ -139,6 +147,7 @@ importFrom(raster,getValues)
 importFrom(raster,getZ)
 importFrom(raster,raster)
 importFrom(raster,rasterToPoints)
+importFrom(scatterplot3d,scatterplot3d)
 importFrom(sp,CRS)
 importFrom(sp,coordinates)
 importFrom(sp,gridded)
@@ -175,6 +184,7 @@ importFrom(stats,terms)
 importFrom(stats,terms.formula)
 importFrom(stats,var)
 importFrom(survival,untangle.specials)
+importFrom(tmvtnorm,dtmvnorm.marginal)
 importFrom(utils,available.packages)
 importFrom(utils,capture.output)
 importFrom(utils,packageDescription)
